packages/nexa-rsx/tests/ui/fail/bad_attr.rs
use nexa_rsx::rsx;

fn main() {
    rsx! {
        div {
            class = "foo"
        }
    };
}
