packages/nexa-rsx/tests/ui/fail/bad_attr.stderr
error: expected identifier
 --> tests/ui/fail/bad_attr.rs:6:19
  |
6 |             class = "foo"
  |                   ^
